# workspace-organizer

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.hypothesis/constants/: 0209625a7df90894  1dba732c9d13d8ea  42243de81ef80503  6af996df74784c77  7e5cd7aee1b919f5  91ffcb697d57cf74  aff205c86f8ad84e  b9563581d6db52b0
.kiro/specs/workspace-organizer/: .config.kiro  design.md  requirements.md  tasks.md
env/: __init__.py  env.py  models.py  tasks.py
server/: app.py
tests/: test_env.py  test_inference.py  test_models.py  test_openenv.py  test_tasks.py
